sprint4/tests/error/11_operator.py
# Incorrect types in operation
#
a: float = 1.0 + "str"
